hphp/hack/test/typecheck/first_class_polymorphism/higher_rank_escape_bad2.php.exp
ERROR: File "higher_rank_escape_bad2.php", line 11, characters 18-19:
Invalid argument (Typing[4110])
  File "higher_rank_escape_bad2.php", line 7, characters 42-47:
  Expected a first-class polymorphic function type.
  File "higher_rank_escape_bad2.php", line 7, characters 35-35:
  A higher rank generic `T#1` will escape its scope where `T#1` corresponds to the rank-2 type parameter `T` in the polymorphic function
  File "higher_rank_escape_bad2.php", line 10, characters 13-13:
  Please make this type explicit
